# RNA-YOLO-ABA

./: manage.py  pyproject.toml  test_api.py
detector/: urls.py  views.py
yolov8_api/: asgi.py  settings.py  urls.py  wsgi.py
